--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "FF2/libs/random-keyboard-parts.pretty"]
-	path = FF2/libs/random-keyboard-parts.pretty
+	path = libs/random-keyboard-parts.pretty
 	url = https://github.com/ai03-2725/random-keyboard-parts.pretty.git
 [submodule "MX_Alps_Hybrid"]
-	path = FF2/libs/MX_Alps_Hybrid
+	path = libs
 	url = https://github.com/dsanchezseco/MX_Alps_Hybrid.git
