--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "FF2/libs/random-keyboard-parts.pretty"]
-	path = libs/random-keyboard-parts.pretty
-	url = https://github.com/ai03-2725/random-keyboard-parts.pretty.git
-[submodule "MX_Alps_Hybrid"]
-	path = libs
+[submodule "libs/MX_Alps_Hybrid"]
+	path = libs/MX_Alps_Hybrid
 	url = https://github.com/dsanchezseco/MX_Alps_Hybrid.git
+[submodule "libs/random-keyboards-parts.pretty"]
+	path = libs/random-keyboards-parts.pretty
+	url = https://github.com/ai03-2725/random-keyboard-parts.pretty.git
